# binterint

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  sample_tui.py  setup.py  verify_auto.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
binterint/: __init__.py  __main__.py  cli.py  controller.py  cpp_bridge.py  event_bus.py  font_manager.py  mcp_server.py  pty_engine.py  renderer.py  screen_buffer.py  semantic.py
binterint/backends/: __init__.py  base.py  headless.py
binterint/plugins/: __init__.py  interactive_shell.py  pty_plugin.py  renderer_plugin.py  semantic_plugin.py
cpp_core/: CMakeLists.txt
cpp_core/src/: bindings.cpp  font_engine.cpp  font_engine.h  screen_buffer.h  terminal_emulator.cpp  terminal_emulator.h
cpp_core/tests/: test_screen_buffer.cpp
tests/: test_components.py  test_cpp_bridge.py  test_event_bus.py  test_font_manager.py  test_mcp_server.py  test_semantic_llm.py
