[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binterint"
version = "0.1.0"
description = "Cross-Platform Headless TUI Automation Interaction Screenshot Utility with AI Semantic Analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Maheshwar Anup", email = "maheshwaranup@gmail.com"}
]
keywords = ["tui", "automation", "headless", "terminal", "pty", "ai", "gemini", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Terminals",
]

dependencies = [
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
    "pyte>=0.8.0",
    "Pillow>=10.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/djmahe4/binterint"
Repository = "https://github.com/djmahe4/binterint"
Issues = "https://github.com/djmahe4/binterint/issues"

[project.optional-dependencies]
llm = [
    "google-generativeai",
    "openai",
]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
binterint = "binterint.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["binterint*"]

[tool.setuptools.package-data]
binterint = ["fonts/*.ttf"]
